# GameEngine5850

./: .gitignore  .gitmodules  CMakeLists.txt
GameEngine/: CMakeLists.txt
GameEngine/Source/: Engine.h
GameEngine/Source/Core/: Application.cpp  Application.h  Core.cpp  Core.h  EntryPoint.h
GameEngine/Source/Events/: Event.h
GameEngine/Source/Log/: Logger.cpp  Logger.h
GameExamples/: CMakeLists.txt
GameExamples/Source/: App.cpp
Scripts/: Setup-Windows.bat
